{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 38,
  "lineage": "1ee3ffad-fb46-e278-7d04-5bf3863116e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mcp_demo_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083e865b97bdf1c1b",
            "arn": "arn:aws:ec2:us-east-1:471112722210:instance/i-07021cf1ebaabc596",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07021cf1ebaabc596",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "mcp-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d5d3cebd25092a6a",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-54-89-215-50.compute-1.amazonaws.com",
            "public_ip": "54.89.215.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "mcp-demo",
                  "ManagedBy": "Terraform",
                  "Project": "MCP-AWS-Demo"
                },
                "tags_all": {
                  "Environment": "mcp-demo",
                  "ManagedBy": "Terraform",
                  "Project": "MCP-AWS-Demo"
                },
                "throughput": 0,
                "volume_id": "vol-0480a14e45fd3929e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d047cbc0d3c87c20",
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-app-server",
              "Role": "ApplicationServer"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-app-server",
              "Project": "MCP-AWS-Demo",
              "Role": "ApplicationServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a63fb8f690848ee3"
            ]
          },
          "dependencies": [
            "aws_key_pair.mcp_demo_key",
            "aws_security_group.mcp_demo_web_sg",
            "aws_subnet.mcp_demo_public_subnet",
            "aws_vpc.mcp_demo_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mcp_demo_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083e865b97bdf1c1b",
            "arn": "arn:aws:ec2:us-east-1:471112722210:instance/i-012ef1fdf01362762",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012ef1fdf01362762",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mcp-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3d1e3c94393c8d1",
            "private_dns": "ip-10-0-1-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "public_dns": "ec2-18-204-230-109.compute-1.amazonaws.com",
            "public_ip": "18.204.230.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "mcp-demo",
                  "ManagedBy": "Terraform",
                  "Project": "MCP-AWS-Demo"
                },
                "tags_all": {
                  "Environment": "mcp-demo",
                  "ManagedBy": "Terraform",
                  "Project": "MCP-AWS-Demo"
                },
                "throughput": 0,
                "volume_id": "vol-092985472dd6a878a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d047cbc0d3c87c20",
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-web-server-1",
              "Role": "WebServer"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-web-server-1",
              "Project": "MCP-AWS-Demo",
              "Role": "WebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a63fb8f690848ee3"
            ]
          },
          "dependencies": [
            "aws_key_pair.mcp_demo_key",
            "aws_security_group.mcp_demo_web_sg",
            "aws_subnet.mcp_demo_public_subnet",
            "aws_vpc.mcp_demo_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083e865b97bdf1c1b",
            "arn": "arn:aws:ec2:us-east-1:471112722210:instance/i-03c6ebda89eb75627",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c6ebda89eb75627",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mcp-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a34e35498009b99",
            "private_dns": "ip-10-0-2-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.165",
            "public_dns": "ec2-54-81-46-93.compute-1.amazonaws.com",
            "public_ip": "54.81.46.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "mcp-demo",
                  "ManagedBy": "Terraform",
                  "Project": "MCP-AWS-Demo"
                },
                "tags_all": {
                  "Environment": "mcp-demo",
                  "ManagedBy": "Terraform",
                  "Project": "MCP-AWS-Demo"
                },
                "throughput": 0,
                "volume_id": "vol-0e0f3f1ae3b4576f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b0b67aa3af996ee",
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-web-server-2",
              "Role": "WebServer"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-web-server-2",
              "Project": "MCP-AWS-Demo",
              "Role": "WebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a63fb8f690848ee3"
            ]
          },
          "dependencies": [
            "aws_key_pair.mcp_demo_key",
            "aws_security_group.mcp_demo_web_sg",
            "aws_subnet.mcp_demo_public_subnet",
            "aws_vpc.mcp_demo_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mcp_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083e865b97bdf1c1b",
            "arn": "arn:aws:ec2:us-east-1:471112722210:instance/i-0a30e9def0e34344d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mcp-demo-mcp-server-profile",
            "id": "i-0a30e9def0e34344d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "mcp-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b3396e3472625b1",
            "private_dns": "ip-10-0-1-173.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.173",
            "public_dns": "ec2-100-26-187-205.compute-1.amazonaws.com",
            "public_ip": "100.26.187.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "mcp-demo",
                  "ManagedBy": "Terraform",
                  "Project": "MCP-AWS-Demo"
                },
                "tags_all": {
                  "Environment": "mcp-demo",
                  "ManagedBy": "Terraform",
                  "Project": "MCP-AWS-Demo"
                },
                "throughput": 0,
                "volume_id": "vol-0c3b312bdafd58271",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d047cbc0d3c87c20",
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-mcp-server",
              "Purpose": "AWS MCP Management Server",
              "Role": "MCPServer"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-mcp-server",
              "Project": "MCP-AWS-Demo",
              "Purpose": "AWS MCP Management Server",
              "Role": "MCPServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a63fb8f690848ee3"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.mcp_server_profile",
            "aws_iam_role.mcp_server_role",
            "aws_key_pair.mcp_demo_key",
            "aws_security_group.mcp_demo_web_sg",
            "aws_subnet.mcp_demo_public_subnet",
            "aws_vpc.mcp_demo_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mcp_demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112722210:internet-gateway/igw-01c251a34d7265a50",
            "id": "igw-01c251a34d7265a50",
            "owner_id": "471112722210",
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-igw"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-igw",
              "Project": "MCP-AWS-Demo"
            },
            "vpc_id": "vpc-0548b447418f5cc54"
          },
          "dependencies": [
            "aws_vpc.mcp_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mcp_demo_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112722210:route-table/rtb-06318b56a9d0eeefc",
            "id": "rtb-06318b56a9d0eeefc",
            "owner_id": "471112722210",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c251a34d7265a50",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-public-rt"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-public-rt",
              "Project": "MCP-AWS-Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0548b447418f5cc54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mcp_demo_igw",
            "aws_vpc.mcp_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mcp_demo_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b07a8acb433fc370",
            "route_table_id": "rtb-06318b56a9d0eeefc",
            "subnet_id": "subnet-0d047cbc0d3c87c20"
          },
          "dependencies": [
            "aws_internet_gateway.mcp_demo_igw",
            "aws_route_table.mcp_demo_public_rt",
            "aws_subnet.mcp_demo_public_subnet",
            "aws_vpc.mcp_demo_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc2a3bad6a1605ab",
            "route_table_id": "rtb-06318b56a9d0eeefc",
            "subnet_id": "subnet-02b0b67aa3af996ee"
          },
          "dependencies": [
            "aws_internet_gateway.mcp_demo_igw",
            "aws_route_table.mcp_demo_public_rt",
            "aws_subnet.mcp_demo_public_subnet",
            "aws_vpc.mcp_demo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mcp_demo_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112722210:security-group/sg-077758792e9daac21",
            "description": "Security group for MCP demo database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077758792e9daac21",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from web security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a63fb8f690848ee3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mcp-demo-mcp-demo-db-sg20250727094152333300000004",
            "name_prefix": "mcp-demo-mcp-demo-db-sg",
            "owner_id": "471112722210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-mcp-demo-db-sg"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-mcp-demo-db-sg",
              "Project": "MCP-AWS-Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0548b447418f5cc54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mcp_demo_web_sg",
            "aws_vpc.mcp_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mcp_demo_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112722210:security-group/sg-0a63fb8f690848ee3",
            "description": "Security group for web servers and MCP server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a63fb8f690848ee3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MCP HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mcp-demo-web-sg20250727094146560900000002",
            "name_prefix": "mcp-demo-web-sg",
            "owner_id": "471112722210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-web-sg"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-web-sg",
              "Project": "MCP-AWS-Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0548b447418f5cc54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mcp_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mcp_demo_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112722210:subnet/subnet-054c795fe8297f701",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054c795fe8297f701",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112722210",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-private-subnet-1",
              "Project": "MCP-AWS-Demo",
              "Type": "Private"
            },
            "vpc_id": "vpc-0548b447418f5cc54"
          },
          "dependencies": [
            "aws_vpc.mcp_demo_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112722210:subnet/subnet-00532b5100a4e65d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00532b5100a4e65d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112722210",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-private-subnet-2",
              "Project": "MCP-AWS-Demo",
              "Type": "Private"
            },
            "vpc_id": "vpc-0548b447418f5cc54"
          },
          "dependencies": [
            "aws_vpc.mcp_demo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mcp_demo_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112722210:subnet/subnet-0d047cbc0d3c87c20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d047cbc0d3c87c20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112722210",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-public-subnet-1",
              "Project": "MCP-AWS-Demo",
              "Type": "Public"
            },
            "vpc_id": "vpc-0548b447418f5cc54"
          },
          "dependencies": [
            "aws_vpc.mcp_demo_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112722210:subnet/subnet-02b0b67aa3af996ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b0b67aa3af996ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112722210",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-public-subnet-2",
              "Project": "MCP-AWS-Demo",
              "Type": "Public"
            },
            "vpc_id": "vpc-0548b447418f5cc54"
          },
          "dependencies": [
            "aws_vpc.mcp_demo_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mcp_demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112722210:vpc/vpc-0548b447418f5cc54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01057c8ac2b36dbc3",
            "default_route_table_id": "rtb-0da5c2ccf9fb4a019",
            "default_security_group_id": "sg-0ea730cff594d3c74",
            "dhcp_options_id": "dopt-05a9c9e0dbf2badff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0548b447418f5cc54",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da5c2ccf9fb4a019",
            "owner_id": "471112722210",
            "tags": {
              "Environment": "mcp-demo",
              "Name": "mcp-demo-vpc",
              "Project": "MCP-Demo"
            },
            "tags_all": {
              "Environment": "mcp-demo",
              "ManagedBy": "Terraform",
              "Name": "mcp-demo-vpc",
              "Project": "MCP-Demo"
            }
          }
        }
      ]
    }
  ]
}